--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <header>
     <div>
-        <img src="assets/icons/Лого.png" alt="Логотип Avion">
+        <img src="assets/icons/Logo.png" alt="Логотип Avion">
 
         <nav>
             <ul>
